[package]
name = "rs-flx"
version = "0.1.3"
edition = "2021"
description = "Rust bindings for flx-c"
repository = "https://github.com/the-flx/flx-rs"
homepage = "https://github.com/the-flx/rs-flx"
readme = "README.md"
authors = [
    "Jen-Chieh Shen <jcs090218@gmail.com>",
]
license = "BSD-3-Clause"
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = { version = "0.72.1", optional = true }
cc = "1.2.49"

[features]
default = [ ]
